examples/test/testpolicy14615.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14615
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key39: value25
      key48: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value8
          key12: value34
          key42: value19
      podSelector:
        matchLabels:
          key24: value19
          key16: value5
